Color contrast and stray element fix

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1435,9 +1435,9 @@ div[role=rowheader] {
 .bg-t7-38 {border: 1px solid black !important; background-color: #779CCC !important; text-align:center;}
 .bg-t7-42 {border: 1px solid black !important; background-color: #6A93C6 !important; text-align:center;}
 .bg-t7-45 {border: 1px solid black !important; background-color: #5D8AC1 !important; text-align:center;}
-.bg-t7-48 {border: 1px solid black !important; background-color: #4E80BC !important; text-align:center;}
+.bg-t7-48 {border: 1px solid black !important; background-color: #4779b5 !important; text-align:center; color:#fff}
 
-/* FY25 Assessment Heatmap #table7 */
+/* FY25 Assessment Heatmap #table8 */
 .bg-t8-0 {border: 1px solid black !important; background-color: #fff !important; text-align:center;}
 .bg-t8-1 {border: 1px solid black !important; background-color: #Fff !important; text-align:center;}
 .bg-t8-3 {border: 1px solid black !important; background-color: #F1F5FA !important; text-align:center;}
@@ -1458,10 +1458,10 @@ div[role=rowheader] {
 .bg-t8-25 {border: 1px solid black !important; background-color: #A3BDDC !important; text-align:center;}
 .bg-t8-26 {border: 1px solid black !important; background-color: #9CB8DA !important; text-align:center;}
 .bg-t8-27 {border: 1px solid black !important; background-color: #9AB6D8 !important; text-align:center;}
-.bg-t8-29 {border: 1px solid black !important; background-color: #5a799e !important; text-align:center;}
-.bg-t8-34 {border: 1px solid black !important; background-color: #5579a5 !important; text-align:center;}
-.bg-t8-37 {border: 1px solid black !important; background-color: #5279a8 !important; text-align:center;}
-.bg-t8-39 {border: 1px solid black !important; background-color: #5079ac !important; text-align:center;}
+.bg-t8-29 {border: 1px solid black !important; background-color: #6685aa !important; text-align:center;}
+.bg-t8-34 {border: 1px solid black !important; background-color: #6185b1 !important; text-align:center;}
+.bg-t8-37 {border: 1px solid black !important; background-color: #5e85b4 !important; text-align:center;}
+.bg-t8-39 {border: 1px solid black !important; background-color: #5c85b8 !important; text-align:center;}
 .bg-t8-47 {border: 1px solid black !important; background-color: #556DA5 !important; text-align:center; color:#fff;}
 
 /* FY25 COLORS */
